--- a/Kube_ReplicationController_ReplicaSet.yml
+++ b/Kube_ReplicationController_ReplicaSet.yml
@@ -1,3 +1,5 @@
+# Use ReplicaSet instead of ReplicaController
+
 Content:
     - ReplicationController
     - Creating and observing ReplicationController
