--- a/Helm.yml
+++ b/Helm.yml
@@ -5,3 +5,36 @@ HELM:   Helm is the best way to find, share, and use software built for Kubernet
 Note:   Needs to be downloaded and installed
 
 URL:    https://helm.sh/
+
+
+Definitions:
+    - Helm:   Helm - это менеджер пакетов для Kubernetes. Этот инструмент позволяет нам обернуть Kubernetes приложения в удобные пакеты, называемые чартами, которые можно легко развертывать, обновлять и управлять ими в любой момент времени.
+
+    - Charts: Чарты – это пакеты, которые могут включать в себя все для запуска приложения в Kubernetes, от deployments до services. Все это дает возможность работать с приложениями как с единой сущностью, а не как с набором отдельных ресурсов, которые еще и в ручную нужно настраивать...
+
+    - also: 
+        -   Так же Helm упрощает управление зависимостями между приложениями, позволяет легко параметризировать настройки приложений через файлы values.yaml и дает возможность повторного использования чартов с помощью шаблонизации.
+        -   К тому же можно с легкостью откатиться к предыдущей версии нашего приложения.
+
+
+
+Структура Helm Chart:
+
+Структура Helm Chart представляет собой директорию, которая содержит комплекс механизмов для управления приложениями, упаковывая их в чарты, которые можно легко инсталлировать, обновлять и управлять.
+
+    -  Первый и самый главный файл - Chart.yaml, он содержит метаданные: имя чарта, версию, описание, информацию о зависимостях и т.д. Этот файл обязателен и помогает идентифицировать чарт:
+
+       apiVersion: v2
+       name: mychart
+       version: 1.0.0
+       description: "helm chart"
+       keywords:
+         - mykeyword
+       home: http://example.com/
+       sources:
+         - https://github.com/example/mychart
+       dependencies:
+         - name: nginx
+           version: "1.14.0"
+           repository: "https://charts.helm.sh/stable"
+
